--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # SonarQube Project Configuration
-sonar.projectKey=sqp_6722f360d8d41d26f380967b3b80976e6b7d61ac
+sonar.projectKey=Demo
 sonar.projectName=Demo
 sonar.projectVersion=1.0
 
